Adicionado outro parágrafo
Novo parágrafo!

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum perferendis quisquam ea est assumenda impedit cum rem porro quia, non modi illum, cupiditate officia, distinctio tenetur eaque doloribus fuga eligendi.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt odio eius voluptates, maxime quibusdam quisquam perspiciatis ad, ducimus consequatur officia aspernatur dolor nam quae blanditiis nesciunt dolore pariatur, eos molestiae.</p>
     
 </body>
 </html>
